--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "gapi-script": "^1.2.0",
+    "moment": "^2.29.4",
     "react": "^18.1.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.1.0",
     "react-google-login": "^5.2.2",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
